1999-10-25  Federico Mena Quintero  <federico@redhat.com>

	* configure.in (CFLAGS): Patch from Uwe Koloska
	<koloska@Rcs1.urz.tu-dresden.de> to fix a stupid typo of mine.

1999-10-22  Havoc Pennington  <hp@pobox.com>

	* src/io-xpm.c (mem_buffer): Clean up stupid
	increment-inside-array-dereference thing

	* src/testpixbuf.c: Add XPM data tests.

	* src/io-xpm.c: Make the XPM data buffer const, fix const
	correctness throughout the code.	

1999-10-22  Havoc Pennington  <hp@pobox.com>

	* src/gdk-pixbuf.h: Export gdk_pixbuf_new_from_xpm_data()

1999-10-22  Havoc Pennington  <hp@pobox.com>

	* src/io-xpm.c (image_load_xpm_data): Export this symbol for 
	loading an XPM from memory.

	* src/gdk-pixbuf-io.c (gdk_pixbuf_new_from_xpm_data): New
	function, loads pixbuf from xpm data
	(image_handler_load): Add g_return_if_fail() to ensure the same
	module isn't loaded twice. Add g_module_symbol() to scan for XPM 
	loader function.

1999-10-22  Federico Mena Quintero  <federico@redhat.com>

	* src/io-png.c (image_load): Patch from Kristian Hogsberg
	Kristensen <hogsberg@daimi.au.dk> to avoid allocating extra row
	buffers; the rows can be read in directly into the main pixel
	buffer.

1999-10-20  Federico Mena Quintero  <federico@redhat.com>

	* src/gdk-pixbuf-io.c (image_handler_load): Free path.

1999-10-20  Federico Mena Quintero  <federico@redhat.com>

	* configure.in: Bumped version number to 0.3.

	* src/Makefile.am (lbgdk_pixbuf_la_LDFLAGS): Added a libtool
	version number for the library.

1999-10-20  Federico Mena Quintero  <federico@redhat.com>

	* src/gdk-pixbuf.h (GdkPixbuf): Removed the unref_fn field.  Now
	all memory management of the buffer is done by libart.

	* src/gdk-pixbuf.c (gdk_pixbuf_unref): Do destruction here.
	Removed gdk_pixbuf_destroy, gdk_pixbuf_duplicate.

	* src/gdk-pixbuf-data.c (gdk_pixbuf_new_from_data): Implemented in
	terms of the libart functions.  Removed the old code.

	* src/gdk-pixbuf-io.c (image_handler_load): Removed the save